--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Tienda de Promociones - Distribuidora</title>
+  <title>Tienda de Promociones - Distribuidora Allana</title>
 
   <style>
     body {
